# CppUTest-with-CMake-Template-Project

./: CMakeLists.txt  Main.cpp
app/: app.cpp
lib/: CMakeLists.txt
lib/MathLib/: CMakeLists.txt
lib/MyUtils/: CMakeLists.txt  MyUtil.cpp  MyUtil.h
test/: CMakeLists.txt
test/add_test/: CMakeLists.txt
test/average_test/: CMakeLists.txt
tests/: CMakeLists.txt
